# taxis_demand_predictor

./: README.md  pyproject.toml
data/transformed/: ts_data_2022_01.parquet
notebooks/: 01_download_and_validate_raw_data.ipynb
